Bug 342658 - notifier widget not added to systray
Summary: notifier widget not added to systray
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Tray widget (other bugs)
Version First Reported In: 5.1.95
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-09 12:56 UTC by Harald Sitter
Modified: 2015-01-10 01:15 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2015-01-09 12:56:19 UTC
by default the notifier widget appears to not get added to the systray automatically

Reproducible: Always
Comment 1 Aleix Pol 2015-01-09 14:36:59 UTC
That's a plasma bug, it ignores the X-KDE-PluginInfo-EnabledByDefault=true property.

I'll look into fixing that.
Comment 2 Aleix Pol 2015-01-09 15:09:52 UTC
https://git.reviewboard.kde.org/r/121948/
Comment 3 Aleix Pol 2015-01-10 01:15:34 UTC
Git commit 5196689ae328decf7865e053d3e5997c2c184b16 by Aleix Pol.
Committed on 10/01/2015 at 01:13.
Pushed by apol into branch 'master'.

Improve initial values of the systemtray plasmoids

Instead of hardcoding which plasmoids we want by default, figure it out
using the plasmoids' described features.
REVIEW: 121948

M  +3    -1    applets/systemtray/package/contents/config/main.xml
M  +12   -1    applets/systemtray/package/contents/ui/main.qml
M  +12   -0    applets/systemtray/plugin/host.cpp
M  +2    -0    applets/systemtray/plugin/host.h

http://commits.kde.org/plasma-workspace/5196689ae328decf7865e053d3e5997c2c184b16