Improve initial values of the systemtray plasmoids

Instead of hardcoding which plasmoids we want by default, figure it out
using the plasmoids' described features.

BUG: 342658
REVIEW: 121948